UI changes and validation

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -5,9 +5,7 @@
  outline: 0;
 }
 .filter{
- position: absolute;
- left: 0;
- top: 0;
+ 
  bottom: 0;
  right: 0;
  z-index: 1;
@@ -17,6 +15,16 @@ background: -webkit-linear-gradient(90deg, rgba(233,76,161,1) 0%, rgba(199,74,23
 background: linear-gradient(90deg, rgba(233,76,161,1) 0%, rgba(199,74,233,1) 100%);
 filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e94ca1",endColorstr="#c74ae9",GradientType=1);
 opacity: .7;
+}
+
+.center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+
 }
 table{
  position: absolute;
