--- a/templates/display.html
+++ b/templates/display.html
@@ -18,9 +18,12 @@
 	</center>
 
 	<div class="filter">
-		<button type="button" id="ViewRecords"> View Tables </button>
-		<button type="button" id="Add Product"> Add Product </button>
-
+		<div class="center">
+		<button type="button" id="ViewRecords" > View Tables </button>
+		<a href="/">
+		<button type="button" id="Add Product"  > Add Product </button>
+		</a>
+		</div>
 	</div>
 
 	<div class="table-responsive" >
@@ -29,9 +32,9 @@
 				<tr>
 
 					<th scope="col">Id</th>
-					<th scope="col">Product Name</th>
+					<th scope="col">Product Name</th >
 					<th scope="col">Category</th>
-					<th scope="col">Price</th>
+					<th scope="col">Price in (₹)</th>
 					<th scope="col">Quantity</th>
 
 				</tr>
