--- a/templates/index.html
+++ b/templates/index.html
@@ -43,25 +43,25 @@
     <div class="form">
        <div class="inputfield">
           <label>Product Name</label>
-          <input type="text" class="input" id="nm" >
+          <input type="text" class="input" id="prodName" maxlength="10" placeholder="Enter product Name" >
        </div>  
         <div class="inputfield">
           <label>Category</label>
-          <input type="text" class="input" id="nm1">
+          <input type="text" class="input" id="prodCate"  maxlength="10" placeholder="Enter product Category">
        </div>  
         
       <div class="inputfield">
           <label>Price</label>
-          <input type="text" class="input" id="nm2">
+          <input type="text" class="input" id="prodPrice" placeholder="Enter price in Rupee">
        </div> 
         
         
       <div class="inputfield">
           <label>Quantity</label>
-          <input type="text" class="input" id="nm3">
+          <input type="text" class="input" id="prodQuant" placeholder="Enter product Quantity">
        </div> 
 
-       <div class="inputfield">
+      <!--  <div class="inputfield">
           <label>Active</label>
           <div class="custom_select">
             <select id="dropDown" onchange="getSelectValue()">
@@ -70,7 +70,7 @@
               <option value="close">close</option>
             </select>
           </div>
-       </div> 
+       </div>  -->
       
       
       <div class="inputfield">
