--- a/static/css/home.css
+++ b/static/css/home.css
@@ -9,15 +9,44 @@
  bottom: 0;
  right: 0;
  z-index: 1;
- background: rgb(233,76,161);
-background: -moz-linear-gradient(90deg, rgba(233,76,161,1) 0%, rgba(199,74,233,1) 100%);
-background: -webkit-linear-gradient(90deg, rgba(233,76,161,1) 0%, rgba(199,74,233,1) 100%);
-background: linear-gradient(90deg, rgba(233,76,161,1) 0%, rgba(199,74,233,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e94ca1",endColorstr="#c74ae9",GradientType=1);
-opacity: .7;
+
+ 
+}
+.custombutton {
+color: #fff !important;
+text-transform: uppercase;
+text-decoration: none;
+background: #ed3330;
+padding: 20px;
+margin-left: 20px; 
+border-radius: 5px;
+display: inline-block;
+border: none;
+transition: all 0.4s ease 0s;
 }
 
-.center {
+.my-custom-scrollbar {
+position: relative;
+height: 400px;
+overflow: auto;
+}
+/*th[scope=row] {
+position: -webkit-sticky;
+position: sticky;
+top: 0;
+
+
+}*/
+.table-wrapper-scroll-y {
+display: block;
+}
+
+.mycustomcentre {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/*.center {
   margin: 0;
   position: absolute;
   top: 50%;
@@ -25,8 +54,8 @@ opacity: .7;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 
-}
-table{
+}*/
+/*table{
  position: absolute;
  z-index: 2;
  left: 50%;
@@ -46,6 +75,10 @@ td , th{
  
 
 }
+thead th {
+	position: fixed;
+	top : 0;
+}*/
 # View_Records {
   background-color: #4CAF50; /* Green */
   border: none;
