Alert box and path

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
   		<title>Registration Form</title>
       <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <link rel="stylesheet" href="./static/css/styles.css">
+      <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <script src="../static/js/index.js"></script>
   	</head>
